--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "nodemon backend/src/v1/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.0"
+  }
 }
